manual update feature and readme updates
- for convenience purposes I added the possibility to update package
information of a single item manually
- Added deployment information to README

--- a/app/views/packages/index.html.haml
+++ b/app/views/packages/index.html.haml
@@ -35,10 +35,16 @@
           %strong Authors:
           %br
           = package.authors
-        %td{colspan: 3}
+        %td{colspan: 2}
           %strong Maintainer:
           %br
           = email_name(package.maintainers)
+        %td
+          = link_to("Update again", package_path(package), method: :put )
+          %br
+          %span#updated_at
+            = "Updated at: #{time_format(package.updated_at)}"
+
       %tr
         %td{colspan: 4}
           %strong Description
