Updated Readme and Timezone display

--- a/app/views/packages/index.html.haml
+++ b/app/views/packages/index.html.haml
@@ -1,7 +1,7 @@
 %h1 R packages
 
 #update_now
-  Next Update at 12.00pm
+  Next Update at 12.00pm GMT+0
 
 #counter
   = "Finished index completion: #{@complete}/#{@count}"
